# houston

./: .gitignore  .keel-v2-design.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SYNC_PROTOCOL.md  cli-deps.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.agents/skills/deck-ui/create-app/template/src-tauri/: Cargo.toml
.agents/skills/deck-ui/create-app/template/src-tauri/src/: lib.rs
.agents/skills/deck-ui/create-app/template/src-tauri/src/commands/: channels.rs  events.rs  issues.rs  memory.rs  mod.rs  scheduler.rs
always-on/: README.md
app/: package.json  vite.config.ts
crates/keel-memory/: Cargo.toml
crates/keel-memory/src/: compaction.rs  migrations.rs  store.rs  types.rs
create-app/: index.js  package.json
engine-design/: 01-three-layers.html  02-agent-folder.html  03-where-engine-lives.html  04-message-flow.html  05-conversations-die.html  06-four-tables.html  07-keeping-agents-apart.html  08-login.html  09-external-triggers.html  10-deployment.html  11-roadmap.html  README.md  index.html  style.css
knowledge-base/: README.md  actions.md  agent-manifest.md  architecture.md  auth.md  cli-bundling.md  design.md  engine-protocol.md  engine-server.md  files-first.md  frameworks.md  houston.md  i18n.md  platform-matrix.md  portable-agents.md  production-infra.md  skills.md  stack-recommender.md
mobile/: .env.example  capacitor.config.ts  index.html  package.json  wrangler.toml
redirect-page/: index.html
scripts/: fetch-cli-deps.sh  release.sh  version.sh
showcase/: package.json
store/: README.md  catalog.json
supabase/: config.toml
website/: eleventy.config.js  package-lock.json  (+2 more)
(+1133 files in other folders)
