[package]
name = "keel-memory"
version = "0.1.0"
edition = "2021"
description = "Persistent memory system for AI agent desktop apps"
license = "MIT"
repository = "https://github.com/ja-818/keel-and-deck"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
libsql = "0.6"

[dev-dependencies]
tempfile = "3"
